--- a/src/css/details.css
+++ b/src/css/details.css
@@ -326,8 +326,8 @@
 }
 
 .details .xqmain .spcs .spcs_l {
-  background-color: #fff;
   width: 247px;
+  background-color: #fff;
 }
 
 .details .xqmain .spcs .spcs_l .spcs_lt {
@@ -389,11 +389,32 @@
 
 .details .xqmain .spcs .spcs_r {
   width: 920px;
-  background-color: #fff;
+  overflow: hidden;
 }
 
 .details .xqmain .spcs .spcs_r .xq_xdbox {
+  background-color: #fff;
+  height: 51px;
+  overflow: hidden;
   width: 100%;
+  font-size: 14px;
+  float: left;
+  margin-right: 5px;
+  font-weight: normal;
+}
+
+.details .xqmain .spcs .spcs_r .xq_xdbox .product-tags .tags-hd {
+  font-size: 14px;
+  float: left;
+  margin-right: 5px;
+  font-weight: normal;
+}
+
+.details .xqmain .spcs .spcs_r .xq_xdbox .product-tags .active {
+  border-bottom: 3px solid #c69a62;
+}
+
+.details .xqmain .spcs .spcs_r .xq_xdbox .product-tags .tags-hd a {
   color: #555c67;
   border: 1px solid white;
   display: block;
@@ -401,4 +422,255 @@
   height: 42px;
   line-height: 42px;
   font-size: 16px;
+}
+
+.details .xqmain .spcs .spcs_r .xq_xdbox .tags-addtocart {
+  float: right;
+  width: 260px;
+}
+
+.details .xqmain .spcs .spcs_r .xq_xdbox .tags-addtocart .price {
+  line-height: 50px;
+  font-size: 24px;
+}
+
+.details .xqmain .spcs .spcs_r .xq_xdbox .tags-addtocart .btn {
+  background: #ec3e7d;
+  padding: 0px 20px;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  font-size: 16px;
+  float: right;
+  margin-left: 15px;
+  border-radius: 0;
+}
+
+.details .xqmain .spcs .spcs_r .mod {
+  margin-top: 70px;
+  padding-top: 20px;
+  background-color: #fff;
+}
+
+.details .xqmain .spcs .spcs_r .mod-title .mod-title-text {
+  line-height: 32px;
+  font-weight: 400;
+  padding-left: 10px;
+  font-size: 21px;
+  background: url("../img/details/probt.png") no-repeat 110px 3px;
+}
+
+.details .xqmain .spcs .spcs_r .product-section .mod-title {
+  height: 32px;
+}
+
+.details .xqmain .spcs .spcs_r .product-attributes ul {
+  padding: 30px 45px;
+}
+
+.details .xqmain .spcs .spcs_r .product-attributes li {
+  clear: both;
+  color: #333;
+  padding: 6px 0;
+}
+
+.details .xqmain .spcs .spcs_r .product-attributes li span {
+  width: 140px;
+  color: #666;
+  display: inline-block;
+}
+
+.details .xqmain .spcs .spcs_r .attributes-cont {
+  width: 580px;
+  float: right;
+  text-align: left;
+}
+
+.details .xqmain .spcs .spcs_r .pltp {
+  width: 100%;
+  overflow: hidden;
+}
+
+.details .xqmain .spcs .spcs_r .pltp .xqxxtb {
+  background-position: 110px -50px;
+}
+
+.details .xqmain .spcs .spcs_r .pinglunxx {
+  margin-top: 50px;
+  background: #fff;
+  overflow: hidden;
+  margin-bottom: 26px;
+  width: 100%;
+}
+
+.details .xqmain .spcs .spcs_r .pinglunxx .yhpjtb {
+  background-position: 110px -146px;
+}
+
+.details .xqmain .spcs .spcs_r .product-score {
+  width: 100%;
+  line-height: 24px;
+}
+
+.details .xqmain .spcs .spcs_r .product-score .score-total .values, .details .xqmain .spcs .spcs_r .product-score .score-total .values .stars, .details .xqmain .spcs .spcs_r .product-score .score-total .values .stars .below {
+  width: 105px;
+}
+
+.details .xqmain .spcs .spcs_r .product-score td {
+  padding: 15px 10px;
+}
+
+.details .xqmain .spcs .spcs_r .btn-k {
+  border: 2px solid #ec3e7d;
+  padding: 4px 30px;
+  font-size: 18px;
+  color: #ec3e7d;
+}
+
+.details .xqmain .spcs .spcs_r .koubeipoint {
+  font-size: 24px;
+  line-height: 40px;
+  padding-left: 45px;
+}
+
+.details .xqmain .spcs .spcs_r .koubeipoint b {
+  font-size: 36px;
+  color: #db3f7e;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .title {
+  padding-left: 55px;
+  margin-top: -20px;
+}
+
+.details .xqmain .spcs .spcs_r user agent stylesheet
+div {
+  display: block;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list {
+  padding: 10px 10px 10px 10px;
+  line-height: 24px;
+}
+
+.details .xqmain .spcs .spcs_r ul, .details .xqmain .spcs .spcs_r li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .comment-item {
+  margin: 15px 0 40px 0;
+}
+
+.details .xqmain .spcs .spcs_r input, .details .xqmain .spcs .spcs_r select, .details .xqmain .spcs .spcs_r textarea {
+  border-width: 1px;
+  border-color: #cccccc;
+  padding: 1px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-avatar {
+  width: 60px;
+  height: 60px;
+  line-height: 58px;
+  overflow: hidden;
+  text-align: center;
+  font-family: Arial;
+  margin: 0 auto;
+  padding: 1px;
+}
+
+.details .xqmain .spcs .spcs_r .iconfont {
+  font-family: "iconfont" !important;
+  font-size: 30px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0px;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .discuss-label {
+  overflow: hidden;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #333;
+  margin-bottom: 10px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member {
+  width: 145px;
+  float: left;
+  text-align: center;
+  margin-right: 5px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member .username {
+  width: 145px;
+  word-break: break-all;
+  line-height: 16px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss {
+  position: relative;
+  width: 575px;
+  margin-left: 150px;
+  padding: 20px 24px;
+  background-color: #f2f2f2;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .point {
+  position: absolute;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  width: 20px;
+  height: 20px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .comment-list .point i {
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  border: 10px dashed transparent;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .comment-list .point-left .above {
+  border-right-color: #f2f2f2;
+  left: 0px;
+  top: 0;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .comlst-title {
+  float: left;
+  margin-right: 20px;
+  color: #ec3e7d;
+  font-size: 18px;
+  width: 40%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .comlst-point {
+  margin-right: 5px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .discuss-detail {
+  color: #575e68;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .discuss-time {
+  font-size: 14px;
+  color: #bebebe;
+  clear: both;
+  line-height: 40px;
+}
+
+.details .xqmain .spcs .spcs_r .comment-list .member-discuss .post-reply .btn-close, .details .xqmain .spcs .spcs_r .comment-list .member-discuss .post-answer .btn-close {
+  margin-left: 10px;
+  vertical-align: middle;
+  display: inline-block;
 }
