--- a/src/css/dlandzc.css
+++ b/src/css/dlandzc.css
@@ -174,7 +174,50 @@
   color: #ec3e7d;
 }
 
-.zhuce .container .zcnr .zcnr_r .sign-title .bdtx {
-  width: 200px;
+.zhuce .container .zcnr .zcnr_r .bdtx {
+  width: 100%;
   height: 36px;
+}
+
+.zhuce .container .zcnr .zcnr_r .bdtx .form-group {
+  margin-bottom: 0px;
+  position: relative;
+}
+
+.zhuce .container .zcnr .zcnr_r .bdtx .form-group .help-block {
+  position: absolute;
+  top: 57px;
+  left: 5px;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: bold;
+  margin: 0px;
+}
+
+.zhuce .container .zcnr .zcnr_r .bdtx .yzbox {
+  margin-bottom: 0px;
+  margin: 0px;
+  padding-left: 0px;
+  display: inline-block;
+}
+
+.zhuce .container .zcnr .zcnr_r .bdtx .codenum {
+  width: 120px;
+  height: 32px;
+  margin-top: 20px;
+  border: 1px solid skyblue;
+  display: inline-block;
+  text-align: center;
+  font-size: 28px;
+  letter-spacing: 4px;
+  line-height: 32px;
+}
+
+.zhuce .container .zcnr .zcnr_r .bdtx .checkbox label {
+  margin-top: 26px;
+}
+
+.zhuce .container .zcnr .zcnr_r .bdtx .btn-block {
+  margin-top: 10px;
+  width: 100%;
 }
