--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -19,6 +19,7 @@
 .peisong{background-color: #fff;width: 100%;
         
     }
+    .commonhead{width: 100%;}
 // 公共样式
 .indexbox{background-color: #F2F2F2;
     width: 100%;}
