--- a/src/sass/goodscar.scss
+++ b/src/sass/goodscar.scss
@@ -141,15 +141,16 @@
                         padding-top: 6px;
                         }
                 }
-
+                .cleargoods{cursor:pointer;}
                 .car_sl{
                     overflow: hidden;
                     margin-top: 30px;
-                    // padding-top: px;
+                  
                     .car_headbt{
                         width: 88px;
                      
                     }
+
                   
                     .jsbox{ border: 1px solid #ece;
                                   display:block;
