--- a/src/css/goodscar.css
+++ b/src/css/goodscar.css
@@ -165,6 +165,10 @@
   padding-top: 6px;
 }
 
+.car_conts .car_listbox .car_list li .cleargoods {
+  cursor: pointer;
+}
+
 .car_conts .car_listbox .car_list li .car_sl {
   overflow: hidden;
   margin-top: 30px;
