--- a/src/css/ssgoodslilst.css
+++ b/src/css/ssgoodslilst.css
@@ -1,3 +1,7 @@
+.addblock {
+  display: block;
+}
+
 #lsitmain {
   width: 100%;
   background: #f2f2f2;
@@ -335,17 +339,56 @@
 
 .goodslist_box li {
   width: 253px;
-  height: 485px;
+  height: 430px;
   float: left;
+  position: relative;
   margin: 0 26px 25px 0;
   background-color: #fff;
+}
+
+.goodslist_box li .goodsbtn {
+  position: absolute;
+  top: 430px;
+  left: 0px;
+  width: 253px;
+  height: 0px;
+  z-index: 100;
+  display: block;
+  background-color: #333;
+}
+
+.goodslist_box li .goodspt {
+  position: absolute;
+  top: 0px;
+  left: 253px;
+  width: 0px;
+  height: 430px;
+  z-index: 100;
+  background-color: #aaa;
 }
 
 .goodslist_box li:nth-child(3n) {
   margin-right: 0px;
 }
 
-.goodslist_box li .goods_bt {
+.goodslist_box li:nth-child(3n) .goodsbtn {
+  position: absolute;
+  top: 430px;
+  left: 0px;
+  width: 0px;
+  height: 0px;
+}
+
+.goodslist_box li:nth-child(3n) .goodsbtn .goodspt {
+  position: absolute;
+  top: 0px;
+  left: 253px;
+  width: 0px;
+  height: 430px;
+  z-index: 100;
+}
+
+.goodslist_box li:nth-child(3n) .goodsbtn .goods_bt {
   height: 30px;
   text-align: center;
   color: #fff;
